added flyway for database migrations and created the first migration based on the erd